# test/openapi/openapi.snapshot.json
@@ -80,6 +80,22 @@
         }
       }
     },
+    "/memberships": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "Default Response"
+          }
+        }
+      },
+      "post": {
+        "responses": {
+          "200": {
+            "description": "Default Response"
+          }
+        }
+      }
+    },
     "/openapi.json": {
       "get": {
         "responses": {
